--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,15 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+
+
+# .vscode
+.vscode/
+
+# built files
+*.asm
+*.ihx
+*.lst
+*.noi
+*.sym
